--- a/LoginAppV2/Base.lproj/Main.storyboard
+++ b/LoginAppV2/Base.lproj/Main.storyboard
@@ -1,24 +1,123 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="LoginAppV2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="CBV-D0-lt0">
+                                <rect key="frame" x="16" y="258" width="396" height="100"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Nx-eF-vhw">
+                                        <rect key="frame" x="0.0" y="0.0" width="396" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tWr-1c-kKD">
+                                        <rect key="frame" x="0.0" y="66" width="396" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IWW-Gw-edu">
+                                <rect key="frame" x="16" y="448" width="133" height="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Forgot User Name?"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2uv-AA-Wdi">
+                                <rect key="frame" x="289" y="448" width="123" height="30"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Forgot Password?"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xio-2H-dxT">
+                                <rect key="frame" x="186.66666666666666" y="392" width="55" height="35"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log In"/>
+                                <connections>
+                                    <segue destination="nLq-e6-pXH" kind="presentation" id="zMp-if-eK8"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.69580918089630672" green="0.69580918089630672" blue="0.69580918089630672" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="2uv-AA-Wdi" firstAttribute="top" secondItem="CBV-D0-lt0" secondAttribute="bottom" constant="90" id="FOq-cw-G80"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CBV-D0-lt0" secondAttribute="trailing" constant="16" id="KZ8-dd-wnd"/>
+                            <constraint firstItem="Xio-2H-dxT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OtR-Jx-Jh3"/>
+                            <constraint firstItem="CBV-D0-lt0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="214" id="SwT-78-I9J"/>
+                            <constraint firstItem="2uv-AA-Wdi" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="IWW-Gw-edu" secondAttribute="trailing" constant="8" symbolic="YES" id="TeS-KK-wa5"/>
+                            <constraint firstItem="CBV-D0-lt0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="XeM-tz-FKd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="2uv-AA-Wdi" secondAttribute="trailing" constant="16" id="bVc-QQ-ipP"/>
+                            <constraint firstItem="IWW-Gw-edu" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="bdI-ek-0QZ"/>
+                            <constraint firstItem="IWW-Gw-edu" firstAttribute="top" secondItem="Xio-2H-dxT" secondAttribute="bottom" constant="21" id="ga1-QC-dpH"/>
+                            <constraint firstItem="Xio-2H-dxT" firstAttribute="top" secondItem="CBV-D0-lt0" secondAttribute="bottom" constant="34" id="hF9-ER-4Hk"/>
+                            <constraint firstItem="CBV-D0-lt0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xq6-5w-VPx"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="forgotPasswordButton" destination="2uv-AA-Wdi" id="Shw-qh-SGg"/>
+                        <outlet property="forgotUserNameButton" destination="IWW-Gw-edu" id="SKB-NT-vdF"/>
+                        <outlet property="logInButton" destination="Xio-2H-dxT" id="rJR-bK-ZLR"/>
+                        <outlet property="passwordTF" destination="tWr-1c-kKD" id="RDP-gn-ZOt"/>
+                        <outlet property="userNameTF" destination="9Nx-eF-vhw" id="Hjh-UD-FX2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="19.626168224299064" y="69.330453563714912"/>
+        </scene>
+        <!--Welcome View Controller-->
+        <scene sceneID="K1B-bz-c6T">
+            <objects>
+                <viewController id="nLq-e6-pXH" customClass="WelcomeViewController" customModule="LoginAppV2" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Y8F-RP-DrM">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="872"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome, !" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SO2-jU-naz">
+                                <rect key="frame" x="152.66666666666666" y="143" width="122.99999999999997" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="123" id="u1X-VQ-svo"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FFX-tM-6oe">
+                                <rect key="frame" x="178.66666666666666" y="593" width="71" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="71" id="fPK-bN-K1S"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Log Out"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Okg-Pt-PLo"/>
+                        <color key="backgroundColor" red="0.70108463192723458" green="0.70108463192723458" blue="0.70108463192723458" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="SO2-jU-naz" firstAttribute="centerX" secondItem="Y8F-RP-DrM" secondAttribute="centerX" id="FGw-Bk-tj8"/>
+                            <constraint firstItem="SO2-jU-naz" firstAttribute="top" secondItem="Okg-Pt-PLo" secondAttribute="top" constant="99" id="Fa9-Yg-1LT"/>
+                            <constraint firstItem="Okg-Pt-PLo" firstAttribute="bottom" secondItem="FFX-tM-6oe" secondAttribute="bottom" constant="244" id="Lwv-DK-vJN"/>
+                            <constraint firstItem="FFX-tM-6oe" firstAttribute="centerX" secondItem="Y8F-RP-DrM" secondAttribute="centerX" id="a9x-Po-hLl"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vjL-pa-I2W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="738.78504672897191" y="68.682505399568043"/>
         </scene>
     </scenes>
 </document>
